--- a/src/pizzapp/PizzApp.form
+++ b/src/pizzapp/PizzApp.form
@@ -165,6 +165,10 @@
             </Property>
             <Property name="text" type="java.lang.String" value="25 cm"/>
           </Properties>
+          <Events>
+            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="rdbMeret25ItemStateChanged"/>
+            <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="rdbMeret25StateChanged"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="rdbMeret32">
           <Properties>
@@ -174,6 +178,9 @@
             <Property name="selected" type="boolean" value="true"/>
             <Property name="text" type="java.lang.String" value="32 cm"/>
           </Properties>
+          <Events>
+            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="rdbMeret32ItemStateChanged"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
