darabszam aranak hozzaadasa

--- a/src/pizzapp/PizzApp.form
+++ b/src/pizzapp/PizzApp.form
@@ -255,6 +255,10 @@
               <SpinnerModel initial="1" maximum="5" minimum="1" numberType="java.lang.Integer" stepSize="1" type="number"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="numDbStateChanged"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="numDbMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
